mavenwebapp-ingress.yaml
# Ingress (ALB)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mavenwebapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: demo.paytm.com   <-- commented out for quick testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mavenwebappsvc
                port:
                  number: 80
